Added help on tracking history

--- a/games/cowsnbulls.html
+++ b/games/cowsnbulls.html
@@ -7,6 +7,21 @@
 <p>Your guess:<input data-bind="value: guess">
 <p>Attempts: <span data-bind="text: attempts"></span>
 <p data-bind="visible: won" style="display:none;">Winner!!!!!!</p>
+<p>Help me!!! <input type="checkbox" data-bind="checked: usehelp" /></p>
+<div data-bind="visible: usehelp" style="display:none;">
+	<table>
+    <thead>
+        <tr><th>Guessing</th><th>Cows</th><th>Bulls</th></tr>
+    </thead>
+    <tbody data-bind="foreach: helper">
+        <tr>
+            <td data-bind="text: guess"></td>
+            <td data-bind="text: cows"></td>
+            <td data-bind="text: bulls"></td>
+        </tr>
+    </tbody>
+</table>
+</div>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
 <script type="text/javascript" src="cowsnbulls.js"></script>
 <script type="text/javascript">
@@ -19,6 +34,8 @@ var ViewModel = function(nthing) {
 	self.bulls = ko.observable(0);
 	self.attempts = ko.observable(0);
 	self.sizecnb = ko.observable(nthing);
+	self.helper = ko.observable('XXXX');
+	self.usehelp = ko.observable(false);
 	self.guess = ko.computed({
 		read: function() {
 			return '';
@@ -29,6 +46,7 @@ var ViewModel = function(nthing) {
 			self.bulls(result[0]);
 			self.cows(result[1]);
 			self.attempts(logic.history.length);
+			self.helper(logic.history);
 		}
 	});
 	
